Induktion und unterbestimmte LGS

--- a/kap8/kap8.tex
+++ b/kap8/kap8.tex
@@ -1,1 +1,41 @@
 \chapter{Arithmetik}
+
+	\section{Die vollst"andige Induktion}
+
+Die vollst"andige Induktion ist eine mathematische Beweismethode, nach der eine Aussage für alle nat"urlichen Zahlen bewiesen wird, die gr"oßer oder gleich einem bestimmten Startwert sind.\\
+Daher wird der Beweis in zwei Etappen durchgef"uhrt; mit dem \textbf{Induktionsanfang} beweist man die Aussage f"ur die kleinste Zahl, mit dem \textbf{Induktionsschritt} f"ur die n"achste Zahl, also logischerweise f"ur alle darauffolgenden Zahlen\\\\
+
+\begin{Beweis}
+ Beweis der Gau"sschen Summenformel\\
+ 
+\mathrm{Z\kern-.3em\raise-0.5ex\hbox{Z}} : $S(n) = \sum\limits_{i=1}^n  = \dfrac{n(n+1)}{2}$\\\\
+
+\begin{array}{rl}
+\textbf{Induktionsanfang}: & $1=\dfrac{1(1+1)}{2} = 1 $ \\\\
+\textbf{Induktionsvorraussetzung}: & $f"ur ein beliebiges, aber festes $k\in\N$ gilt: $\sum\limits_{i=1}^k  = \dfrac{k(k+1)}{2}$\\\\
+\textbf{Induktionsbehauptung}: & $es soll daraus folgen, dass $\forall n \in \N$ gilt: $\sum\limits_{i=1}^{n+1}  = \dfrac{(n+1)((n+1)+1)}{2}$\\\\
+ \textbf{Induktionsschluss}: &  \sum\limits_{i=1}^n + (n+1) = \dfrac{n(n+1)}{2} + \dfrac{2(n+1)}{2} = \dfrac{(n+1)((n+1)+1)}{2}\\\\
+ \end{array}
+\end{Beweis}\\\\
+
+\begin{Beweis}
+Beweis der Summe ungerader Zahlen
+
+\end{Beweis}\\\\
+
+\begin{Beweis}
+Beweis der Bernoullischen Ungleichung
+
+\end{Beweis}\\\\
+
+\begin{Beweis}
+Summe der Quadratzahlen
+
+\end{Beweis}\\\\
+
+\begin{Beweis}
+Summe der Kubikzahlen
+
+\end{Beweis}\\\\
+
+Am Besten so viele Induktionen wie m"oglich?
