--- a/kap8/kap8.tex
+++ b/kap8/kap8.tex
@@ -2,18 +2,18 @@
 
 	\section{Die vollst"andige Induktion}
 
-Die vollst"andige Induktion ist eine mathematische Beweismethode, nach der eine Aussage für alle nat"urlichen Zahlen bewiesen wird, die gr"oßer oder gleich einem bestimmten Startwert sind.\\
-Daher wird der Beweis in zwei Etappen durchgef"uhrt; mit dem \textbf{Induktionsanfang} beweist man die Aussage f"ur die kleinste Zahl, mit dem \textbf{Induktionsschritt} f"ur die n"achste Zahl, also logischerweise f"ur alle darauffolgenden Zahlen\\\\
+Die vollst"andige Induktion ist eine mathematische Beweismethode, nach der eine Aussage f"ur alle nat"urlichen Zahlen bewiesen wird, die gr"o"ser oder gleich einem bestimmten Startwert sind.\\
+Daher wird der Beweis in zwei Etappen durchgef"uhrt; mit dem \textbf{Induktionsanfang} beweist man die Aussage f"ur die kleinste Zahl, mit dem \textbf{Induktionsschritt} f"ur die n"achste Zahl, also logischerweise f"ur alle darauffolgenden Zahlen.\\\\
 
 \begin{Beweis}
  Beweis der Gau"sschen Summenformel\\
  
-\mathrm{Z\kern-.3em\raise-0.5ex\hbox{Z}} : $S(n) = \sum\limits_{i=1}^n  = \dfrac{n(n+1)}{2}$\\\\
+\mathrm{Z\kern-.3em\raise-0.5ex\hbox{Z}} : $S(n) = \sum\limits_{i=1}^n i  = \dfrac{n(n+1)}{2}$\\\\
 
 \begin{array}{rl}
 \textbf{Induktionsanfang}: & $1=\dfrac{1(1+1)}{2} = 1 $ \\\\
 \textbf{Induktionsvorraussetzung}: & $f"ur ein beliebiges, aber festes $k\in\N$ gilt: $\sum\limits_{i=1}^k  = \dfrac{k(k+1)}{2}$\\\\
-\textbf{Induktionsbehauptung}: & $es soll daraus folgen, dass $\forall n \in \N$ gilt: $\sum\limits_{i=1}^{n+1}  = \dfrac{(n+1)((n+1)+1)}{2}$\\\\
+\textbf{Induktionsbehauptung}: & $man behauptet, dass $\forall n \in \N$ gilt: $\sum\limits_{i=1}^{n+1}  = \dfrac{(n+1)((n+1)+1)}{2}$\\\\
  \textbf{Induktionsschluss}: &  \sum\limits_{i=1}^n + (n+1) = \dfrac{n(n+1)}{2} + \dfrac{2(n+1)}{2} = \dfrac{(n+1)((n+1)+1)}{2}\\\\
  \end{array}
 \end{Beweis}\\\\
@@ -24,12 +24,33 @@ Beweis der Summe ungerader Zahlen
 \end{Beweis}\\\\
 
 \begin{Beweis}
-Beweis der Bernoullischen Ungleichung
+Beweis der Bernoullischen Ungleichung\\
 
+\mathrm{Z\kern-.3em\raise-0.5ex\hbox{Z}} : $S(n) = \sum\limits_{i=1}^n  = \dfrac{n(n+1)}{2}$\\\\
+
+Ich mach noch weiter
 \end{Beweis}\\\\
 
+
 \begin{Beweis}
-Summe der Quadratzahlen
+Beweis der Summe der Quadratzahlen\\
+
+\end{Beweis}
+
+\begin{Beweis}
+Beweis f"ur eine Absch"atzung der Summe der Quadratzahlen\\
+
+\mathrm{Z\kern-.3em\raise-0.5ex\hbox{Z}} : $ \sum\limits_{i=1}^n i^2 > \dfrac{n^3}{3} \\\\
+
+\begin{array}{rl}
+\textbf{Induktionsanfang}: & $ 1^2 > \dfrac{1^3}{3} $ \\\\
+\textbf{Induktionsvorraussetzung}: & $f"ur ein beliebiges, aber festes $k\in\N$ gilt: $\sum\limits_{i=1}^k i^2  > \dfrac{k^3}{3}$\\\\
+\textbf{Induktionsbehauptung}: & $man behauptet, dass $\forall n \in \N$ gilt: $\sum\limits_{i=1}^{n+1} i^2  > \dfrac{(n+1)^3}{3}$\\\\
+$ \textbf{Induktionsschluss}: &  \sum\limits_{i=1}^{n+1} i^2 = \overbrace{\sum\limits_{i=1}^{n} i^2}^{>\textcolor{red}{\dfrac{n^3}{3}}} + (n+1)^2 > \textcolor{red}{\dfrac{n^3}{3}} +(n+1)^2 $\\\\
+&$= \dfrac{n^3+3n^2+6n+3}{3} $\\\\
+&$= \dfrac{n^3+3n^2+3n+1+3n+2}{3}  $\\\\
+&$ = \dfrac{(n+1)^3}{3} + \dfrac{3n+2}{3} \overbrace{>}^{\textcolor{red}{n\geq0}} \dfrac{(n+1)^3}{3} $
+ \end{array}
 
 \end{Beweis}\\\\
 
