--- a/kap5/kap5.tex
+++ b/kap5/kap5.tex
@@ -1060,6 +1060,44 @@
 
     \subsection{Winkel zwischen Ebenen (und Geraden)}
 
+        \paragraph{} Die einzige bisher angesprochene Möglichkeit den Winkel zwischen zwei geometrischen Formen zu
+        ermitteln macht sich der Definition des Skalarprodukts zunutze. Wie bereits erläutert gilt:
+        $\cos(\alpha)=\dfrac{\vv{v}\odot\vv{u}}{|\vv{v}|\cdot|\vv{u}|}$. Hierbei soll erneut hervorgehoben werden, dass
+        der Winkel der "kleinere" der beiden möglichen ist. Den anderen erhält man in Abhängigkeit des ersten.
+        Daraus lässt sich ableiten wie zwei Geraden oder Ebenen oder auch eine Gerade und eine Ebene zueinander stehen:
+        \begin{enumerate}[1)]
+            \item Geraden: $\cos(\alpha) = \dfrac{\textcolor{red}{\vv{u_1}} \odot \textcolor{red}{\vv{u_2}}} {|\textcolor{red}{\vv{u_1}}| \cdot |\textcolor{red}{\vv{u_2}}|}$
+            \item Ebenen: $\cos(\alpha) = \dfrac{\textcolor{orange}{\vv{n_1}} \odot \textcolor{orange}{\vv{n_2}}} {|\textcolor{orange}{\vv{n_1}}| \cdot |\textcolor{orange}{\vv{n_2}}|}$
+            \item Gerade / Ebene: $\sin(\alpha) = \dfrac{\textcolor{red}{\vv{u}} \odot \textcolor{orange}{\vv{n}}} {|\textcolor{red}{\vv{u}}| \cdot |\textcolor{orange}{\vv{n}}|}$
+        \end{enumerate}
+        \begin{minipage}{0.3\textwidth}
+            \definecolor{qqwuqq}{rgb}{0,0.4,0}
+            \begin{tikzpicture}[>=triangle 45]
+                \draw (-2,7) node {1)};
+                \draw [line width=0.8pt] (-0.25,0.25) node {O};
+                \draw [line width=0.8pt,color=qqwuqq,fill=qqwuqq,fill opacity=0.4] (4,2.42) -- (4.7,2.42) arc (0:90:0.7) -- cycle;
+                \draw (4.3,2.72) node {$\alpha$};
+                \draw [->,line width=0.8pt,color=blue] (0,0,0) -- (3,4,4);
+                \draw [->,line width=0.8pt,color=red] (3,4,4) -- (5,2,-1);
+                \draw [->,line width=0.8pt,color=blue] (0,0,0) -- (4,0,0);
+                \draw [->,line width=0.8pt,color=red] (4,0,0) -- (4,5,0);
+                \draw [,line width=0.8pt,color=red,dashed] (1,6,9) -- (3,4,4);
+                \draw [,line width=0.8pt,color=red,dashed] (5,2,-1) -- (7,0,-6);
+                \draw [,line width=0.8pt,color=red,dashed] (4,-3,0) -- (4,0,0);
+                \draw [,line width=0.8pt,color=red,dashed] (4,5,0) -- (4,8,0);
+                \draw [line width=0.8pt,color=blue] (0.5,1.5) node {$\vv{q_1}$};
+                \draw [line width=0.8pt,color=blue] (2,0.3,0) node {$\vv{q_2}$};
+                \draw [line width=0.8pt,color=red] (3.5,2.75) node {$\vv{u_1}$};
+                \draw [line width=0.8pt,color=red] (4.3,1.8,0) node {$\vv{u_2}$};
+                \draw [line width=0.8pt] (6,2.65) node {$g$};
+                \draw [line width=0.8pt] (4.2,6,0) node {$h$};
+            \end{tikzpicture}
+        \end{minipage}
+        \begin{minipage}{0.3\textwidth}
+            
+        \end{minipage}
+
+
     \subsection{Abstand zu einem Punkt}
 
 
