--- a/kap11/kap11.tex
+++ b/kap11/kap11.tex
@@ -1,6 +1,6 @@
 \chapter{Integrale}
 \section{Einführung}
-Der Hauptunterschied zwischen einem bestimmten und einem unbestimmen Integral ist die Existenz (bestimmtes Integral) bzw. das Fehlen
+Der Hauptunterschied zwischen einem bestimmten und einem unbestimmten Integral ist die Existenz (bestimmtes Integral) bzw. das Fehlen
 (unbestimmtes Integral) der Integrationsgrenzen.\\
 Bei einem bestimmten Integral ist die Lösung ein Flächeinhalt, also ein einfacher Zahlenwert.\\
 Bei einem unbestimmten Integral erhält man als Lösung eine Funktion, eine sogenannte Stammfunktion.\\
@@ -8,12 +8,13 @@ Bei einem unbestimmten Integral erhält man als Lösung eine Funktion, eine soge
 
 \section{Bestimmte Integrale}
 \begin{Definition}
-  Wenn Integralgrenzen angegeben werden, handelt es sich um ein bestimmtes Integral:\\
+  Wenn Integrationsgrenzen angegeben werden, handelt es sich um ein bestimmtes Integral:\\
   $
   \begin{array}{rcl}
-    \int_{a}^{b} f(x)dx & = & \lim\limits_{n \rightarrow \infty} U_n = \lim\limits_{n \rightarrow \infty} s_n\\
-                         & = & \lim\limits_{n \rightarrow \infty} O_n = \lim\limits_{n \rightarrow \infty} S_n\\
-                         & = & \lim\limits_{n \rightarrow \infty} \dfrac{b-a}{n}\sum\limits_{k=1}^{n}f(\dfrac{b-a}{n}k)
+    \int_{a}^{b} f(x)dx     & = & \lim\limits_{n \rightarrow \infty} U_n = \lim\limits_{n \rightarrow \infty} s_n\\
+                            & = & \lim\limits_{n \rightarrow \infty} O_n = \lim\limits_{n \rightarrow \infty} S_n\\
+                            & = & \lim\limits_{n \rightarrow \infty} \dfrac{b-a}{n}\sum\limits_{k=1}^{n}f(\dfrac{b-a}{n}k)
+
   \end{array}
   $\\
   $S_n$ und $O_n$ bezeichnen die Obersumme, wohingegen $s_n$ und $U_n$ die Untersumme bezeichnen.
@@ -38,7 +39,7 @@ Bei einem unbestimmten Integral erhält man als Lösung eine Funktion, eine soge
 \subsection{Sätze über Integrale}
 \begin{Theorem}
   \begin{minipage}{0.6\textwidth}
-    \begin{array}{rccl}
+    \begin{array}{rrl}
       $
       \int_a^b f(x)dx &=& -\int_b^a f(x)dx\\\\
       \int_a^b (f(x)+g(x))dx &=& \int_a^b f(x)dx + \int_a^b g(x)dx\\\\
@@ -56,64 +57,55 @@ Bei einem unbestimmten Integral erhält man als Lösung eine Funktion, eine soge
 
 \end{Theorem}
 \subsubsection{Beweise}
-Invertieren der Intergrationsgrenzen:\\
+Invertieren der Intergrationsgrenzen:
 \begin{Beweis}
   $\int_a^b f(x)dx = F(b)-F(a) = -(F(a)-F(b)) = -\int_b^a f(x)dx$
-
 \end{Beweis}
-Summenregel:\\
+\\
+Summenregel:
 \begin{Beweis}
   $\int_a^b f(x)+g(x)dx = [F(x)+G(x)]_a^b = F(b)+G(b)-(F(a)+G(b)) = F(b)-F(a)+G(b)-G(b) = \int_a^b f(x)dx$+\int_a^b g(x)dx$
 \end{Beweis}
-
-Linearität:\\
+\\
+Linearität:
 \begin{Beweis}
   $\int_a^b r*f(x)dx = [r*F(x)]_a^b = r*F(b)-r*F(a) = r*(F(a)-F(b)) = r*\int_a^b f(x)dx$
 \end{Beweis}
-
-Abschnittweise Integration:\\
+\\
+Abschnittweise Integration:
 \begin{Beweis}
   $\int_a^b f(x)dx+ \int_b^c f(x)dx = F(a)-F(b)-(F(b)-F(c)) = F(c)-F(a) = \int_a^c f(x)dx$
 \end{Beweis}
 
-\subsection{Merkenswerte Integrale}
-\begin{array}{rccl}
-  \int x^n dx&=&\frac{x^{n+1}}{n+1}\\
-  \int\sin x dx&=& -\cos x\\
-  \int\cos x dx&=& \sin x\\
-  \int\frac{ dx}{\cos^2x}&=& \tan x\\
-  \int\frac{1}{x} dx&=& \ln|x|\\
-\end{array}
-
 \subsection{Integrationsregeln}
 \subsubsection{Partielle Integration}
-\begin{Definition}
+\begin{Theorem}
   Seien $u$ und $v$ zwei stetig differenzierbare Funktionen im Intervall $I$ und $u'$
   und $v'$ in I stetig. Dann gilt:\\
   $\int u(x)'v(x) dx= u(x)v(x) - \int u(x)v'(x) dx$
-\end{Definition}
+\end{Theorem}
 \begin{Beweis}\\
 Nachweisen u, v diffbar und u', v' stetig (kommt noch in sauber)\\
+\begin{array}{rccl}
   $
-  (u(x)*v(x))' = u'(x)v(x)+u(x)v'(x)\\
-  \Leftrightarrow \int (u(x)*v(x))' dx = \int u'(x)v(x)+\int u(x)v'(x)\\
-  \Leftrightarrow u(x)*v(x) = \int u'(x)v(x)+\int u(x)v'(x)\\
-  \Leftrightarrow \int u(x)v'(x) = u(x)*v(x)- \int u'(x)v(x)\\
+  &&(u(x)*v(x))' &= u'(x)v(x)+u(x)v'(x)\\
+  &\Leftrightarrow & \int (u(x)*v(x))' dx &= \int u'(x)v(x)+\int u(x)v'(x)\\
+  &\Leftrightarrow & u(x)*v(x) &= \int u'(x)v(x)+\int u(x)v'(x)\\
+  &\Leftrightarrow & \int u(x)v'(x) &= u(x)*v(x)- \int u'(x)v(x)\\
   $
+\end{array}
 \end{Beweis}
-  \begin{Beispiel}\\
-  \[
-  \int x\sin x\dD x
-  \]
-  Setzt man hier $u'=\sin x$, $v=x$, dann ist $u=-\cos x$ und $v'=1$. Setzt man
-  diese Werte in die Produktintegrations-Formel ein, dann folgt:
-  \begin{align*}
-  \int x\sin x\dD x&= (-\cos x)x-\int (-\cos x)\cdot1\dD x\\
-  &=-x\cos x+\int\cos x\dD x= -x\cos x+\sin x
-  \end{align*}
+\begin{Beispiel}\\
+  \begin{array}{rrl}
+  $
+  \int x\sin(x) dx &=& \int x(-\cos(x))' dx\\
+  &=& -x\cos(x) - \int-\cos(x)*1 dx\\
+  &=& -x\cos(x) + \int\cos(x) dx\\
+  &=& -x\cos(x) + \sin(x)
+  $
+  \end{array}
 \end{Beispiel}
-
-\subsubsection{Substitutionsmethode}
+\subsubsection{Substitution}
 Es soll die Stammfunktion von $x(1-x^2)^9$ bestimmt werden. Hier wäre zum
 Ableiten die Kettenregel und die Produktregel nötig, beides gibt es aber in
 reiner Form beim Integrieren nicht. Man kann aber häufig durch geschickte
@@ -263,66 +255,101 @@ Insbesondere ist dann (rechne das nach!)
   J_4&=\frac{5}{16}\left(\arctan y+\frac{y}{y^2+1}\right)+
        \frac{5}{24}\cdot\frac{y}{(y^2+1)^2}+\frac{y}{6(y^2+1)^3}
 \end{align*}
+\subsubsection{Integrale von $e$-Funktionen}
+\begin{Theorem}
+  Für $f(x)=e^{l(x)}$ mit $l(x) = ax+b$ gilt:\\
+  $F(x) = \dfrac{1}{a}e^{l(x)}$
+\end{Theorem}
+\begin{Beweis}
+  Not yet... ;((
+\end{Beweis}
+\subsubsection{Integrale von $ln()$-Funktionen}
+KP
+\subsubsection{Integrale von periodischen Funktionen}
 
 \subsection{Bemerkungen}
-Erweiterung der NEW-Regel
+Erweiterung der NEW-Regel\\
+
+\subsection{Merkenswerte Integrale}
+\begin{array}{rccl}
+  $
+  \int x^n dx&=&\frac{x^{n+1}}{n+1}\\
+  \int\sin x dx&=& -\cos x\\
+  \int\cos x dx&=& \sin x\\
+  \int\frac{ dx}{\cos^2x}&=& \tan x\\
+  \int\frac{1}{x} dx&=& \ln|x|\\
+  $
+\end{array}
+ln, e^x, usw.
 
 \section{Flächenberechnung mittels Integralen}
 \begin{Definition}
   Für die auf dem Intervall $[a;b]$ (also stückweise) stetige Funktion $f$ mit Nullstellen und $x_1,x_2,...,x_n$
   mit $a \leq x_1 \leq x_2 \leq ... \leq x_n \leq b$ ist der Flächeninhalt $A$ zwischen dem Graphen von $f$ und
   der $x_1$-Achse im Intervall $[a;b]$ gegeben durch:\\\\
-  $A= |{\int_a^{x_1} f(x)dx}|+|{\int_{x_1}^{x_2} f(x)dx}|...+|{\int_{x_{n-1}}^{x_n} f(x)dx}|+|{\int_{x_n}^b f(x)dx}|$
+  $A= |{\int_a^{x_1} f(x)dx}|+|{\int_{x_1}^{x_2} f(x)dx}|+...+|{\int_{x_{n-1}}^{x_n} f(x)dx}|+|{\int_{x_n}^b f(x)dx}|$
 \end{Definition}
-
-\\Graph+Intergal
+Bildhaft sieht das folgendermaßen aus:\\
+\definecolor{uuuuuu}{rgb}{0.26666666666666666,0.26666666666666666,0.26666666666666666}
 \definecolor{xdxdff}{rgb}{0.49019607843137253,0.49019607843137253,1.}
-\definecolor{ffqqqq}{rgb}{1.,0.,0.}
-\definecolor{qqzzqq}{rgb}{0.,0.6,0.}
-\begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=5.0cm,y=5.0cm]
-  \begin{axis}[
-  x=5.0cm,y=5.0cm,
-  axis lines=middle,
-  xmin=-1.0261085461981427,
-  xmax=0.8799969446433364,
-  ymin=-0.45014188815180656,
-  ymax=0.9656470777143747,
-  xtick={-1.0,-0.8,...,0.8},
-  ytick={-0.4,-0.2,...,0.8},]
-  \clip(-1.0261085461981427,-0.45014188815180656) rectangle (0.8799969446433364,0.9656470777143747);
-  \draw[line width=0.8pt,color=ffqqqq,fill=ffqqqq,fill opacity=0.10000000149011612] plot[raw gnuplot, id=func1] function{set samples 100; set xrange [-0.7:0.4]; plot 7.0*x**(3.0)+5.0*x**(2.0)-0.3} -- (0.4,0.) -- (-0.7,0.) -- cycle;
-  \draw[line width=2.4pt,color=qqzzqq] plot[raw gnuplot, id=func0] function{set samples 100; set xrange [-0.9261085461981428:0.7799969446433365]; plot 7.0*x**(3.0)+5.0*x**(2.0)-0.3};
-  \begin{scriptsize}
-  \draw[color=qqzzqq] (-0.836110892770214,-1.1411817405388711) node {$f$};
-  \draw[color=xdxdff] (-0.6828869787154327,0.05702926736952031) node {$A$};
-  \draw[color=xdxdff] (0.4203252024789926,0.05702926736952031) node {$B$};
-  \end{scriptsize}
-  \end{axis}
+\definecolor{ffqqtt}{rgb}{1.,0.,0.2}
+\definecolor{ccqqqq}{rgb}{0.8,0.,0.}
+\begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=1.0cm,y=1.0cm]
+\begin{axis}[
+x=1.5cm,y=1.5cm,
+axis lines=middle,
+xmin=-1.656172905056168,
+xmax=2.1525547061790204,
+ymin=-1,
+ymax=3,
+xtick={0},
+ytick={0},]
+\clip(-1.656172905056168,-2.232475229950016) rectangle (2.1525547061790204,5.08508018061208);
+\draw[line width=0.8pt,color=ffqqtt,fill=ffqqtt,fill opacity=0.10000000149011612, smooth,samples=50,domain=-1.0:1.5] plot(\x,{\x^(4.0)-\x}) -- (1.5,0.) -- (-1.,0.) -- cycle;
+\draw[line width=2.8pt,color=ccqqqq,smooth,samples=100,domain=-1.656172905056168:2.1525547061790204] plot(\x,{(\x)^(4.0)-(\x)});
+\begin{scriptsize}
+\draw[color=ccqqqq] (1,3.5) node {$f$};
+\draw[color=ffqqtt] (0.7930088921948063,0.0017783687666894088) node {$A$};
+\draw [fill=xdxdff] (-1.,0.) circle (2.5pt);
+\draw[color=xdxdff] (-1.1213515738197308,0.6765529455603252) node {$a$};
+\draw [fill=xdxdff] (1.5,0.) circle (2.5pt);
+\draw[color=xdxdff] (1.6427250259349402,0.6015779925832545) node {$b$};
+\draw [fill=uuuuuu] (0.,0.) circle (2.0pt);
+\draw[color=uuuuuu] (0.10323932480575641,0.48161806781994154) node {$X_1$};
+\draw [fill=uuuuuu] (1.,0.) circle (2.0pt);
+\draw[color=uuuuuu] (1.0229320813244895,-0.5380412926682192) node {$X_2$};
+\end{scriptsize}
+\end{axis}
 \end{tikzpicture}
+(Achtung Fläche kann nicht richtig gezeichnet werden (GeoGebra ist schuld))
+\\
 \begin{Beispiel}
   $f(x)=x^2-2x^3;x\in \R$\\
   notwendige und hinreichende Bedingung für Nullstellen:$f(x)=0$\\
-  $\Leftrightarrow x^2(x-2)&=0\\
+  $\Leftrightarrow x^2(1-2x)&=0\\
   \stackrel{SdN}{\Leftrightarrow}
   \left\{ \begin{array}{rcl}
   x^2&=0\\
-  x-2&=0
+  1-2x&=0
   \end{array}\right\\
   \Leftrightarrow
   \left\{ \begin{array}{rcl}
   x_1&=0\\
-  x_2&=2
+  x_2&=\dfrac{1}{2}
   \end{array}\right\\
   $\\
   Also gilt:\\
-  $A_{-1}^{3} &= |\int_{-1}^0 x^3-2x^2 dx| + |\int_{0}^2 x^3-2x^2 dx| + |\int_{2}^3 x^3-2x^2 dx|\\
-  &= |\Big[\dfrac{1}{4}x^4-\dfrac{2}{3}x^3\Big]_{-1}^0| + |\Big[\dfrac{1}{4}x^4-\dfrac{2}{3}x^3\Big]_{0}^2| + |\Big[\dfrac{1}{4}x^4-\dfrac{2}{3}x^3\Big]_{2}^3|\\
-  &= |0-(\dfrac{1}{4}-\dfrac{2}{3})| + |4-\dfrac{8}{3}-0| + |\dfrac{81}{4}-54 - (4-\dfrac{8}{3})|\\
-  &= \dfrac {35}{6}$FE\\
-  (Also hoffentlich)
-
+  \begin{array}{rrl}
+    $
+    A_{-1}^{1} &=& |\int_{-1}^0 x^2-2x^3 dx| + |\int_{0}^{\dfrac{1}{2}} x^2-2x^3 dx| + |\int_{\dfrac{1}{2}}^1 x^2-2x^3 dx|\\
+    &=& |\Big[\dfrac{1}{3}x^3-\dfrac{1}{2}x^4\Big]_{-1}^0| + |\Big[\dfrac{1}{3}x^3-\dfrac{1}{2}x^4\Big]_{0}^{0.5}| + |\Big[\dfrac{1}{3}x^3-\dfrac{1}{2}x^4\Big]_{0.5}^1|\\
+    &=& |0-(-\dfrac{1}{3}-\dfrac{1}{2})| + |\dfrac{1}{24}-\dfrac{1}{32}-0| + |\dfrac{1}{3}-\dfrac{1}{2}- (\dfrac{1}{24}-\dfrac{1}{32})|\\
+    &=& 1 + \dfrac {1}{12} - \dfrac{1}{16} = \dfrac{49}{48}
+    $  FE
+\end{array}
 \end{Beispiel}
 \begin{GTR-Tipp}
   Mit $Y_1 = f(x)$ und $Y_2 = abs(Y_1)$ bzw. $Y_2 = |Y_1|$ (zu finden in 'MATH'>'NUM' oder über Alpha-F2) lässt sich die Fläche berechnen über 2nd-CALC mit der Option Integral.\\
   Hierzu wählt man $Y_2$ aus und gibt $a$ und $b$ an.
 \end{GTR-Tipp}
+\section{Uneigentliche Integrale}
