Integrale (ja, immer noch...)

--- a/kap10/kap10.tex
+++ b/kap10/kap10.tex
@@ -92,7 +92,7 @@ Durch die Verwendung des Newton-Rhapson Verfahrens erhält man die Iterationsvor
 ￼$x_{n+1}=x_{n}-\dfrac{f(x_{n})}{f'(x_{n}}$
 $\Leftrightarrow x_{n+1}=x_{n}-\dfrac{x_{n}^{2}-a}{2x_{n}}=\dfrac{x_{n}^{2}+a}{2x_{n}}=\dfrac{1}{2}(x_{n}+\dfrac{a}{x_{n}})$\\
 Als kluger, ungefähr zutreffender Startwert gilt $x_0=\dfrac{a+1}{2}$\\
-Eine mögliche Umsetung in Python wäre:\\
+Eine mögliche Umsetzung in Python wäre:\\
 
 \begin{lstlisting}[language=Python]
 	a=2															#Muss manuell angegeben werden
