--- a/title.tex
+++ b/title.tex
@@ -1,13 +1,29 @@
 \begin{titlepage}
-	\begin{center}
-	\line(1,0){300}  \\
+
+\begin{center}
+	\hfill  \\
+	[3,5cm]
+
+	\titlefont Schülerskript SMP\\
 	[0,5cm]
-	\Huge{\bfseries Schülerskript SMP} \\
-	[3cm]
-	\textsc{ \bfseries MATHEMATIK}  \\
-	[15cm]
+\end{center}
+\epigraph{Mach' dir keine Sorgen wegen deiner Schwierigkeiten mit der Mathematik. Ich kann dir versichern, daß meine noch größer sind.}
+{\textit{Brief an ein Schulmädchen, 1943}\\ \textsc{Albert Einstein}}
+\null\vfill
+\vspace*{1cm}
+\noindent
+\hfill
+\begin{minipage}{0.35\linewidth}
+    \begin{flushright}
+        \printauthor
+    \end{flushright}
+\end{minipage}
+%
+\begin{minipage}{0.02\linewidth}
+    \rule{1pt}{100pt}
+\end{minipage}
+\titlepagedecoration
+\begin{center}
 	\small{\today} \\
-	[2cm]
-	\tiny{Clara, Bruno, Pascal, Rémy, ..., 1$^{ere}$ SMP}
-	\end{center}
+\end{center}
 \end{titlepage}
