--- a/kap3/kap3.tex
+++ b/kap3/kap3.tex
@@ -54,7 +54,7 @@ Die Funktion $f(x)=|x|$ ist nicht differenzierbar, da bei der Stelle $x_{0}=0$ d
 Ist eine Funktion $f$ an der Stelle $x_{0}$ differenzierbar, so ist sie an dieser Stelle auch stetig.
 Die Umkehrung gilt erst einmal nicht, aber es gibt eine verneinende Aussage: Ist $f$ an der Stelle $x_{0}$ nicht stetig, so ist sie hier auch nicht differenzierbar.\\
 
-Ist eine Funktion differenzierbar und ist ihre Ableitung zus"atzlich stetig, dann wird sie \textbf{Stetig differenzierbar} genannt. 
+Ist eine Funktion differenzierbar und ist ihre Ableitung zus"atzlich stetig, dann wird sie \textbf{Stetig differenzierbar} genannt.
 
 \section{Ableitungsregeln}
 
@@ -195,7 +195,7 @@ $\lim\limits_{x \rightarrow x_{0}} \dfrac{f(x)}{g(x)} = \lim\limits_{x \rightarr
 
 \begin{Bemerkung}
 \begin{enumerate}
-\item Falls die Funktionsvorschrift nicht direkt ein Bruch ist (siehe 2. Beispiel) sollte man diese erst zu einem Bruch umformen, um mit der Hospital-Regel fortfahren zu k"onnen. 
+\item Falls die Funktionsvorschrift nicht direkt ein Bruch ist (siehe 2. Beispiel) sollte man diese erst zu einem Bruch umformen, um mit der Hospital-Regel fortfahren zu k"onnen.
 \item ACHTUNG: Die Hospital-Regel ist nicht umkehrbar!
 \end{enumerate}
 \end{Bemerkung}
@@ -242,7 +242,7 @@ Diese begegnen einen bei gebrochenrationalen Funktion mit $n>m+1$.\\
 \begin{Definition}
 Eine stetige Funktion $f$ mit $a,b\in I \subset D_{f}$ ist :\\
 \begin{enumerate}
-\item ... auf dem Intervall $I$ monoton wachsend, wenn $\forall a < b: f(a)\leq f(b)$ 
+\item ... auf dem Intervall $I$ monoton wachsend, wenn $\forall a < b: f(a)\leq f(b)$
 \item ... auf dem Intervall $I$ monoton fallend, wenn $\forall a < b: f(a) \geq f(b)$ \\
 \end{enumerate}
 Wenn die Ordnungsrelation strikt sind, dann wird die Funktion als \textbf{streng monoton} bezeichnet.\\
@@ -282,13 +282,14 @@ Hat an einer Stelle $x_{0}$ die zweite Ableitung von $f$ eine Nullstelle, also $
 Hat $f''$ an der Stelle $x_{0}$ einen Vorzeichenwechsel oder ist $f'''(x_{0})\neq 0$, dann ist der Sonderfall ausgeschlossen und es handelt sich um deine Wendestelle. Der Punkt $W(x_{0}|f(x_{0}))$ hei"st Wendepunkt. Diese Bedingung ist die hinreichende Bedingung f"ur eine Wendestelle.\\\\
 
 \begin{Bemerkung}
+  \label{NEW-Regel}
 Eine Hilfsformel, die den Zusammenhang zwischen den verschiedenen Ableitungen einfach darstellt ist die NEW-Regel:\\\\
 
 \begin{minipage}[b]{0.2\linewidth}
 \\
 N $=$ Nullstellen\\
 E $=$ Extremstellen\\
-W $=$ Wendestellen 
+W $=$ Wendestellen
 \end{minipage}
 \hfill \vline \hfill
 \begin{minipage}[b]{0.4\linewidth}
@@ -395,13 +396,13 @@ $f''(x) $ &$ = $&$ \dfrac{\textcolor{red}{(16x-8)}(4x^2-4x+1)-(8x^2-8x)\textcolo
 
 \subsubsection{Achsenschnittpunkte}
 
-\underline{Bestimmung der Nullstelle(n):} \\ 
+\underline{Bestimmung der Nullstelle(n):} \\
 
 \begin{array}{rcccl}
 $\Rightarrow    &    f(x)    &    =    &    0 & D=\R \backslash \{ \frac{1}{2} \}$ \\
 $\Leftrightarrow    &    \dfrac{(2x-2)^2}{(2x-1)}     &     =     &      0$\\
 $\Leftrightarrow    &    2x-2     &     =     &     0$\\
-$\Leftrightarrow    &    x      &    =     &     1   &  L = \{ 1 \} $    \\ 
+$\Leftrightarrow    &    x      &    =     &     1   &  L = \{ 1 \} $    \\
 \end{array}\\
 
 Die Gleichung f"ur die senkrechte Asymptote lautet deshalb $x=1$ \\
@@ -417,14 +418,14 @@ Man kann anhand des GTR vermuten dass $f$ punktsymmetrisch ist. Dieser Symmetrie
 $\Rightarrow & f(x_{0}+h)-y_{0} & = & f(\frac{1}{2} + h) +2 $\\ \\
 $&&=&\dfrac{4(\frac{1}{2}+h)^2 -8(\frac{1}{2}+h) +4}{2(\frac{1}{2}+h)-1}+2$\\ \\
 $&&=&\dfrac{4(\frac{1}{4} +h +h^2)-4 -8h +4}{2h} + \dfrac{4h}{2h}    $\\ \\
-$&&=&\dfrac{1+4h+4h^2-8h+4h}{2h} = \dfrac{4h^2+1}{2h}\\ \\ \\
+$&&=&\dfrac{1+4h+4h^2-8h+4h}{2h} = \dfrac{4h^2+1}{2h}\\ï¿½\\ï¿½\\
 \end{array}
 
 \begin{array}{rccl}
 $\Rightarrow & -f(x_{0}-h)+y_{0} & = & -f(\frac{1}{2} - h) -2 $\\ \\
 $&&=&-\dfrac{4(\frac{1}{2}-h)^2 -8(\frac{1}{2}-h) +4}{2(\frac{1}{2}-h)-1}-2$\\ \\
 $&&=&-\dfrac{4(\frac{1}{4} -h +h^2)-4 +8h +4}{-2h} - \dfrac{4h}{2h}    $\\ \\
-$&&=&\dfrac{1-4h+4h^2+8h-4h}{2h} = \dfrac{4h^2+1}{2h}\\ \\ 
+$&&=&\dfrac{1-4h+4h^2+8h-4h}{2h} = \dfrac{4h^2+1}{2h}\\ \\
 \end{array}\\
 Hiermit hat man die Punktsymmetrie von $f$ zu $P_{0}$ bewiesen.\\\\\\
 
@@ -448,7 +449,7 @@ $\Rightarrow &  \lim\limits_{x \rightarrow {\frac{1}{2}}^{+}} {f(x)} & = & \lim\
 $\Rightarrow &  \lim\limits_{x \rightarrow {\frac{1}{2}}^{-}} {f(x)} &=& \lim\limits_{h \rightarrow 0} {\dfrac{4(\frac{1}{2} -h)^2 -8(\frac{1}{2} -h) +4}{2(\frac{1}{2}-h) -1} } &=& \lim\limits_{h \rightarrow 0} \dfrac{1-4h+4h^2-4-4h+4}{-2h} \\ \\
 &&&&=& \dfrac{\lim\limits_{h \rightarrow 0} {1-8h+4h^2} }{\lim\limits_{h \rightarrow 0}{-2h}} \\ \\
 &&&&=& -\dfrac {1}{0} = - \infty $\\
-\end{array} 
+\end{array}
 
 \underline{Asymptoten:} \\ \\
 
@@ -467,12 +468,12 @@ $ \Rightarrow & (4x^2 & -8x & +4) & : & (2x-1) &=& 2x-3+\dfrac{1}{2x-1} \\ \\
 
 \underline{Monotonieverhalten:} \\ \\
 
-Untersuchung auf Extremstellen: 
+Untersuchung auf Extremstellen:
 \begin{itemize}
 \item Notwendige Bedingung: $\Rightarrow f'(x)=0 \\ \\
 \Leftrightarrow \dfrac{8x^2-8x}{4x^2-4x+1}=0 \qquad \qquad D=\R \backslash \{ \frac{1}{2} \}\\\\
 \Leftrightarrow x(8x-8)=0 \\ \\
-\Leftrightarrow x=0 \quad \lor \quad x=1 \qquad \qquad L=\{1;0\}$ \\ 
+\Leftrightarrow x=0 \quad \lor \quad x=1 \qquad \qquad L=\{1;0\}$ \\ï¿½
 
 \item Hinreichende Bedingung: Vorzeichenwechsel $f'(x)$ oder $f''(x)\neq 0$ \\
 
@@ -481,8 +482,8 @@ Untersuchung auf Extremstellen:
 shorten > = 6pt,
 shorten < = 6pt}}
 \tkzTabInit{$x$ /1, $ x $ /1.2, $(8x-8) $ /1.2, $(2x-1)^2$ /1.2, $f'(x)$ /1.2, $f(x)$ /3,}   {$-\infty$ ,$0$ , $\frac{1}{2}$, $1$ ,$+\infty$}
-\tkzTabLine{{},-,z,+,t,+,t,+,} 
-\tkzTabLine{{},-,t,-,t,-,z,+,} 
+\tkzTabLine{{},-,z,+,t,+,t,+,}
+\tkzTabLine{{},-,t,-,t,-,z,+,}
 \tkzTabLine{{},+,t,+,d,+,t,+}
 \tkzTabLine{{},+,z,-,d,-,z,+,}
 \tkzTabVar{ - / $-\infty$ , + / $(0|f(0))$ / , -D+ / $-\infty$/$+\infty$  , - / $(1|f(1))$ , + / $+\infty$ }
@@ -490,7 +491,7 @@ shorten < = 6pt}}
 
 \end{itemize}
 
-\underline{Kr"ummungsverhalten:} \\ 
+\underline{Kr"ummungsverhalten:} \\
 
 Untersuchung auf Wendestellen:
 \begin{itemize}
@@ -551,10 +552,10 @@ Hier ist die Kurvenschar der Funktion\\ $f(x)=ax^3$. Sie verlaufen alle durch da
 
 \subsection{Beispiel}
 
-$f_{a}(x)= \dfrac{x^2-3ax}{x+a} \qquad \qquad D_{f} = \R \backslash \{ -a \}, \qquad a \in \R^+$ \\  \\
+$f_{a}(x)= \dfrac{x^2-3ax}{x+a} \qquad \qquad D_{f} = \R \backslash \{ -a \}, \qquad a \in \R^+$ \\ ï¿½\\
 Sei $K_{a}$ der Graph der Funktion.\\
- 
- 
+
+
 \subsubsection{Bestimmen Sie die Schnittpunkte von $K_{a}$ mit den Koordinatenachsen}\\ \\
 
 $f_{a}(0)=\dfrac{0}{x+a} = 0$ \\ \\ \\
@@ -562,7 +563,7 @@ $f_{a}(0)=\dfrac{0}{x+a} = 0$ \\ \\ \\
 $\Rightarrow f_{a}(x)=0 & \Leftrightarrow & x^2-3x & = & 0 $\\
 $&\Leftrightarrow & x(x-3a) & = & 0$ \\
 $&\Leftrightarrow & x=0 & \lor & x  =  3a $ \\
-\end{array}\\ \\ 
+\end{array}\\ï¿½\\ï¿½
 
 Es ergeben sich die Punkte $P_{1}(0|0)$ und $P_{2}(3a|0)$\\\\
 
@@ -605,8 +606,8 @@ Es ergeben sich somit die Extremstellen $H(-3a|-9a)$ und $T(a|-a)$. Bevor man mi
 
 \lim\limits_{x \rightarrow {-a^+}}{f_{a}} = \lim\limits_{x \rightarrow {-a^+}}{\dfrac{x^2-3ax}{x+a}} =\lim\limits_{h \rightarrow {0}}{\dfrac{(-a+h)^2 -3a(-a+h)}{(-a+h)+a}} = \lim\limits_{h \rightarrow {0}}{\dfrac{h^2-5ah+4a^2}{h}} = + \infty \\ \\
 
-\lim\limits_{x \rightarrow {-a^-}}{f_{a}} = \lim\limits_{x \rightarrow {-a^-}}{\dfrac{x^2-3ax}{x+a}} =\lim\limits_{h \rightarrow {0}}{\dfrac{(-a-h)^2 -3a(-a-h)}{(-a-h)+a}} = \lim\limits_{h \rightarrow {0}}{\dfrac{h^2+5ah+4a^2}{-h}} = - \infty $\\ \\ \\ 
-  
+\lim\limits_{x \rightarrow {-a^-}}{f_{a}} = \lim\limits_{x \rightarrow {-a^-}}{\dfrac{x^2-3ax}{x+a}} =\lim\limits_{h \rightarrow {0}}{\dfrac{(-a-h)^2 -3a(-a-h)}{(-a-h)+a}} = \lim\limits_{h \rightarrow {0}}{\dfrac{h^2+5ah+4a^2}{-h}} = - \infty $\\ \\ \\
+ï¿½
 Jetzt kann die Monotonietabelle erstellt werden:\\\\
 
 \begin{tikzpicture}
@@ -614,8 +615,8 @@ Jetzt kann die Monotonietabelle erstellt werden:\\\\
 shorten > = 6pt,
 shorten < = 6pt}}
 \tkzTabInit{$x$ /1, $ x^2-2ax-3a $ /1.2, $(x+a)^2 $ /1.2, $f_{a}'(x)$ /1.2, $f_{a}(x)$ /3,}   {$-\infty$ ,$-3a$ , $-a$, $a$ ,$+\infty$}
-\tkzTabLine{{},+,z,-,t,-,z,+,} 
-\tkzTabLine{{},+,t,+,d,+,t,+,} 
+\tkzTabLine{{},+,z,-,t,-,z,+,}
+\tkzTabLine{{},+,t,+,d,+,t,+,}
 \tkzTabLine{{},+,z,-,d,-,z,+,}
 \tkzTabVar{ - / $-\infty$ , + / $H(-3a|-9a)$ / , -D+ / $-\infty$/$+\infty$  , - / $T(a|-a)$ , + / $+\infty$ }
 \end{tikzpicture}\\ \\
@@ -628,7 +629,7 @@ Diesen Punkt haben wir schon per ''Zufall'' herausgefunden, da wir eine Nullstel
 $\Rightarrow & f_{1}=f_{2} & \Leftrightarrow & \dfrac{x^2-3x}{x+1} & = & \dfrac{x^2-6x}{x+2} & \qquad \qquad D=\R \backslash \{-1;-2\} \\ \\
 &&\Leftrightarrow& \dfrac{x-3}{x+1} &=& \dfrac{x-6}{x+2}&  \\\\
 &&\Leftrightarrow& -x & = & -5x &\\ \\
-&&\Leftrightarrow& x &=& 0 & \qquad \qquad L=\{ 0 \} \\
+&&\Leftrightarrow& x &=& 0 &ï¿½\qquad \qquad L=\{ 0 \} \\
 $
 \end{array}
 
@@ -646,12 +647,12 @@ $\Rightarrow & f_{a}(5) = \dfrac{5}{3} & \Leftrightarrow & \dfrac{5^2-15a}{5+a} 
 $\Rightarrow  f_{1}(x) & = & \dfrac{x^2-3x}{x+1} &=& -15x-4 \quad = \quad y\\\\
 &\Leftrightarrow & x^2-3x &=& -15x^2-19x-4\\\\
 &\Leftrightarrow & 4x^2+4x+1 &=& 0\\\\
-\Delta = 0 & \Rightarrow &x &=& -\dfrac{1}{2}$\\\\ 
+\Delta = 0 & \Rightarrow &x &=& -\dfrac{1}{2}$\\\\
 \end{array}
 
 $\Rightarrow f_{1}(-\dfrac{1}{2}) = \dfrac{(\frac{1}{2})^2 -3\cdot (\frac{1}{2})}{-\frac{1}{2}+1} = \dfrac{7}{2}$ \\ \\
 
-Es existiert genau ein Schnittpunkt von $K_{1}$ mit der Geraden $j$: $P_{K_{1}j}(-\frac{1}{2}|\frac{7}{2})$ 
+Es existiert genau ein Schnittpunkt von $K_{1}$ mit der Geraden $j$: $P_{K_{1}j}(-\frac{1}{2}|\frac{7}{2})$
 
 \subsubsection{ Vom Punkt $A(0|-4)$ wird die Tangente an $K_{1}$ gelegt. Bestimmen Sie eine Gleichung der Tangente und die Koordinaten des Ber"uhrpunktes }\\ \\
 
@@ -660,7 +661,7 @@ Sei $B(x_{0}|f_(x_{0}))$, dann lautet die Tangentengleichung:\\
 \begin{array}{rccl}
 $\Rightarrow & T_{x_{0}}(x) &=& f'(x_{0}) \cdot (x-x_{0}) +f(x_{0}) \\ \\
 &&=& \dfrac{x_{0}^2 +2x_{0}-3}{(x_{0}+1)^2} \cdot (x-x_{0}) + \dfrac{x_{0}^2 -3x_{0}}{x_{0}+1} \\ \\
-\end{array} 
+\end{array}
 
 Jetzt werden die Koordinaten des Punktes $A(0|-4)$, durch den die Tangente auch noch geht, eingesetzt. \\
 
