--- a/style.tex
+++ b/style.tex
@@ -22,8 +22,8 @@
 
 %Beweis:
 \newenvironment{Beweis}
-  {\begin{tcolorbox}[colback=gray!5!white,colframe=gray!75!black,opacityframe=0.5, opacitybacktitle=0.5,sharpish corners,boxrule=0pt,frame hidden,title=Beweis,breakable,break at=23cm,pad at break=1mm,]}
-  {\end{tcolorbox}}
+  {\begin{tcolorbox}[colback=gray!5!white,colframe=gray!70!black,opacityframe=0.5, opacitybacktitle=0.5,sharpish corners,boxrule=0pt,frame hidden,title=Beweis,breakable,break at=23cm,pad at break=1mm,]}
+  {\hfill\ensuremath{\square} \end{tcolorbox}}
 
 
 %Definition:
@@ -34,7 +34,7 @@
 
 %Theorem:
 \newenvironment{Theorem}
-  {\begin{tcolorbox}[colback=blue!5!white,colframe=blue!75!black,sharpish corners,boxrule=0pt,frame hidden,title=Theorem]}
+  {\begin{tcolorbox}[colback=blue!5!white,colframe=blue!70!black,sharpish corners,boxrule=0pt,frame hidden,title=Theorem]}
   {\end{tcolorbox}}
 
 %Beispiel
