--- a/kap4/kap4.tex
+++ b/kap4/kap4.tex
@@ -119,7 +119,7 @@ Zur Vollständigen Funktionsdiskussion einer Sinus-Funktion sind einige Besonder
     \end{itemize}
   \item Symmetrieeigenschaften\\
   Hier sollte zumindest bekannt sein, dass $f(x)=\sin(x)$ punktsymmetrisch zum Origo ist, und dass $f(x)=\cos(x)$ Achsensymmetrisch zur $y$-Achse ist.
-  \item Die Null-, Extrem- und Wendestellen sind in Form einer Menge anzugeben. (Es sei denn, die Aufgabenvorschrift fordert explizit auf eine Begrenzung auf ein angegebenes Intervall auf)\\
+  \item Die Null-, Extrem- und Wendestellen sind in Form einer Menge anzugeben. (Es sei denn, die Aufgabenvorschrift fordert explizit zu einer Begrenzung auf ein angegebenes Intervall auf)\\
   \begin{Beispiel}
     Die Nullstellen der Funktion $f(x)=\sin(x)$ lassen sich dartstellen als: $x \in \{k\pi|k \in \Z\}$
   \end{Beispiel}
