--- a/kap5/kap5.tex
+++ b/kap5/kap5.tex
@@ -1094,7 +1094,21 @@
             \end{tikzpicture}
         \end{minipage}
         \begin{minipage}{0.3\textwidth}
-            
+            \begin{tikzpicture}[>=triangle 45]
+                \draw[color=red,fill=red,opacity=0.5]  (-4,0,4) -- (4,0,4) -- (4,0,-4) -- (-4,0,-4) -- cycle;
+                \draw[color=orange,fill=orange,opacity=0.5]  (-4,4,0) -- (4,4,0) -- (4,-4,0) -- (-4,-4,0) -- cycle;
+                \draw[->,line width=0.8,color=red] (0,0,0) -- (0,4,0);
+                \draw[->,line width=0.8,color=orange] (0,-2.5,0) -- (0,-2.5,4);
+                \draw[line width=0.8] (-5,0,0) -- (5,0,0);
+                \draw[line width=0.8,dashed] (-9,0,0) -- (-5,0,0);
+                \draw[line width=0.8,dashed] (5,0,0) -- (9,0,0);
+                \draw[line width=0.8,color=red] (0.3,2,0) node {$\vv{n_1}$};
+                \draw[line width=0.8,color=orange] (0.3,-2.5,2) node {$\vv{n_2}$};
+                \draw[line width=0.8] (3.7,0,-4.6) node {$E_1$};
+                \draw[line width=0.8] (3.9,4.3,0) node {$E_2$};
+                \draw[line width=0.8] (7,0.25,0) node {$g$};
+                \draw[line width=0.8] (1.3,-1.8,0) node {$O$};
+            \end{tikzpicture}
         \end{minipage}
 
 
