--- a/kap11/kap11.tex
+++ b/kap11/kap11.tex
@@ -16,6 +16,73 @@ Bei einem unbestimmten Integral erhält man als Lösung eine Funktion, eine soge
   \end{align*}
   $S_n$ und $O_n$ bezeichnen die Obersumme, wohingegen $s_n$ und $U_n$ die Untersumme bezeichnen.
 \end{Definition}
+
+\definecolor{lightblu}{rgb}{0,0,0.3}
+\definecolor{lightre}{rgb}{0.3,0,0}
+\begin{tikzpicture}
+    \draw[->,line width=0.8pt] (-5.5,0) -- (5.5,0) node[below] {$x_1$};
+    \draw[->,line width=0.8pt] (0,-5.5) -- (0,5.5) node[right] {$x_2$};
+    \foreach  \x in {-5,...,-1,1,2,...,5}
+        \draw[line width=0.8pt] (\x,0.1) -- (\x,-0.1) node[below] {\x};
+    \foreach  \x in {-5,...,-1,1,2,...,5}
+        \draw[line width=0.8pt] (-0.1,\x) -- (0.1,\x) node[right] {\x};
+
+    \draw[gray,very thin] (-5,-5) grid (5,5);
+
+    \draw[line width=1.5pt,color=red] (-5,2) ..controls(-2,-4) ..(0,0);
+    \draw[line width=1.5pt,color=red] (0,0) ..controls(2,4) ..(5,5);
+
+    \draw[line width=0.8pt,fill=lightblu,fill opacity=0.2] (0.5,0) -- (0.5,2.4) -- (1.25,2.4) -- (1.25,0) -- cycle;
+    \draw[line width=0.8pt,fill=lightblu,fill opacity=0.2] (1.25,0) -- (1.25,3.5) -- (2,3.5) -- (2,0) -- cycle;
+    \draw[line width=0.8pt,fill=lightblu,fill opacity=0.2] (2,0) -- (2,4.1) -- (2.75,4.1) -- (2.75,0) -- cycle;
+    \draw[line width=0.8pt,fill=lightblu,fill opacity=0.2] (2.75,0) -- (2.75,4.5) -- (3.5,4.5) -- (3.5,0) -- cycle;
+
+    \draw[line width=0.8pt,fill=lightblu,fill opacity=0.2] (0.5,0) -- (0.5,1) -- (1.25,1) -- (1.25,0) -- cycle;
+    \draw[line width=0.8pt,fill=lightblu,fill opacity=0.2] (1.25,0) -- (1.25,2.4) -- (2,2.4) -- (2,0) -- cycle;
+    \draw[line width=0.8pt,fill=lightblu,fill opacity=0.2] (2,0) -- (2,3.5) -- (2.75,3.5) -- (2.75,0) -- cycle;
+    \draw[line width=0.8pt,fill=lightblu,fill opacity=0.2] (2.75,0) -- (2.75,4.1) -- (3.5,4.1) -- (3.5,0) -- cycle;
+
+    \draw[line width=1.2pt,color=orange] (0.5,1) -- (0.5,0) node[below] {a};
+    \draw[line width=1.2pt,color=orange] (3.5,4.5) -- (3.5,0) node[below] {b};
+
+    \draw (1.5,3.8) node {$O_n$};
+    \draw (2.375,2.5) node {$U_n$};
+
+
+
+
+    \draw[->,line width=0.8pt] (1.5,-7) -- (12.5,-7) node[below] {$x_1$};
+    \draw[->,line width=0.8pt] (7,-12.5) -- (7,-1.5) node[right] {$x_2$};
+    \foreach  \pos/ \name in {2/-5, 3/-4, 4/-3, 5/-2, 6/-1, 8/1, 9/2, 10/3, 11/4, 12/5}
+        \draw[line width=0.8pt] (\pos,-6.9) -- (\pos,-7.1) node[below] {\name};
+    \foreach  \pos/ \name in {-12/-5, -11/-4, -10/-3, -9/-2, -8/-1, -6/1, -5/2, -4/3, -3/4, -2/5}
+        \draw[line width=0.8pt] (6.9,\pos) -- (7.1,\pos) node[right] {\name};
+
+    % \foreach \g / \u in {-12/-5, -11/-4, -10/-3, -9/-2, -8/-1, -6/1, -5/2, -4/3, -3/4, -2/5}
+        % \draw[line width=0.8pt] (\g,-7.1) node[below] {\u};
+
+    \draw[gray,very thin] (2,-12) grid (12,-2);
+
+    \draw[line width=1.5pt,color=blue] (2,-9) ..controls(5,-3) ..(7,-4);
+    \draw[line width=1.5pt,color=blue] (7,-4) ..controls(10,-5) ..(12,-9);
+
+    \draw[line width=0.8pt,fill=lightre,fill opacity=0.2] (7.5,-7) -- (7.5,-4.2) -- (8.25,-4.2) -- (8.25,-7) -- cycle;
+    \draw[line width=0.8pt,fill=lightre,fill opacity=0.2] (8.25,-7) -- (8.25,-4.4) -- (9,-4.4) -- (9,-7) -- cycle;
+    \draw[line width=0.8pt,fill=lightre,fill opacity=0.2] (9,-7) -- (9,-4.75) -- (9.75,-4.75) -- (9.75,-7) -- cycle;
+    \draw[line width=0.8pt,fill=lightre,fill opacity=0.2] (9.75,-7) -- (9.75,-5.25) -- (10.5,-5.25) -- (10.5,-7) -- cycle;
+
+    \draw[line width=0.8pt,fill=lightre,fill opacity=0.2] (7.5,-7) -- (7.5,-4.4) -- (8.25,-4.4) -- (8.25,-7) -- cycle;
+    \draw[line width=0.8pt,fill=lightre,fill opacity=0.2] (8.25,-7) -- (8.25,-4.75) -- (9,-4.75) -- (9,-7) -- cycle;
+    \draw[line width=0.8pt,fill=lightre,fill opacity=0.2] (9,-7) -- (9,-5.25) -- (9.75,-5.25) -- (9.75,-7) -- cycle;
+    \draw[line width=0.8pt,fill=lightre,fill opacity=0.2] (9.75,-7) -- (9.75,-6.2) -- (10.5,-6.2) -- (10.5,-7) -- cycle;
+
+    \draw[line width=1.2pt,color=orange] (7.5,-4.2) -- (7.5,0-7) node[below] {a};
+    \draw[line width=1.2pt,color=orange] (10.5,-6.2) -- (10.5,-7) node[below] {b};
+
+    \draw (9.5,-4.4) node {$O_n$};
+    \draw (8.625,-5.6) node {$U_n$};
+\end{tikzpicture}
+
 \begin{Bemerkung}
   $a$ und $b$ bezeichnen jeweils die untere und obere Grenze des zu berechnenden Integrals. Sie bezeichnen anschaulich die $x$-Werte, zwischen denen die Fläche berechnet wird.
 \end{Bemerkung}
